update skip recalculation on running milestone

--- a/force-app/main/default/classes/STO_ReservationTimeCalulator.cls
+++ b/force-app/main/default/classes/STO_ReservationTimeCalulator.cls
@@ -15,12 +15,32 @@ global without sharing class STO_ReservationTimeCalulator implements Support.Mil
         }
     }
 
+    /**
+     * description: calculating time from CaseMilestone StartDate to Violation
+     */
     global Integer calculateMilestoneTriggerTime(String caseId, String milestoneTypeId) {
+
+        // do not recalculate if casemilestone already exists.
+        // otherwise it will shorten the time, because StartDate remains the same
+        // and we calculating minutes form CaseMilestone StartDate.
+
+        CaseMilestone cs = [
+            SELECT Id,TimeRemainingInMins
+            FROM CaseMilestone
+            WHERE CaseId = :caseId 
+                AND MilestoneType.Name = 'Handling time' 
+                AND IsCompleted = false
+            LIMIT 1
+        ];
+
+        if(cs?.TimeRemainingInMins != null){
+            return cs.TimeRemainingInMins;
+        }
 
         Datetime now = Datetime.now();
         Datetime nextStartDate;
         Id bhId = STO_BUSINESS_HOURS_ID;
-        
+
         nextStartDate = BusinessHours.nextStartDate(
             bhId,
             Datetime.newInstance(
