--- a/force-app/main/default/classes/nksGetStoUtilityController.cls
+++ b/force-app/main/default/classes/nksGetStoUtilityController.cls
@@ -197,7 +197,8 @@ public without sharing class nksGetStoUtilityController {
             caseIds.add(c.id);
         }
 
-        return [
+        List<PendingServiceRouting> resList = new List<PendingServiceRouting>();
+        List<PendingServiceRouting> psrList = [
             SELECT Id, WorkItemId
             FROM PendingServiceRouting
             WHERE
@@ -212,7 +213,25 @@ public without sharing class nksGetStoUtilityController {
                 AND isPushed = FALSE
                 AND WorkItemId IN :caseIds
             ORDER BY RoutingPriority, SecondaryRoutingPriority DESC NULLS LAST, CreatedDate
-            LIMIT 1
+            LIMIT 5
         ];
+
+        Map<Id, PendingServiceRouting> psrByCaseIdMap = new Map<Id, PendingServiceRouting>();
+        for (PendingServiceRouting psr : psrList) {
+            psrByCaseIdMap.put(psr.WorkItemId, psr);
+        }
+
+        List<Case> cases = [SELECT Id, NKS_Incompetent_IDs__c FROM Case WHERE ID IN :psrByCaseIdMap.keySet()];
+        for (Case casy : cases) {
+            String str = '';
+            try {
+                str += casy.NKS_Incompetent_IDs__c;
+                if (!str.contains(UserInfo.getUserID()))
+                    resList.add(psrByCaseIdMap.get(casy.Id));
+            } catch (Exception ex) {
+                throw new AuraHandledException('Det har oppstått en feil ved henting av ny STO.');
+            }
+        }
+        return resList;
     }
 }
