Reservation time fix

--- a/force-app/main/default/classes/STO_ReservationTimeCalulator.cls
+++ b/force-app/main/default/classes/STO_ReservationTimeCalulator.cls
@@ -1,5 +1,4 @@
 global without sharing class STO_ReservationTimeCalulator implements Support.MilestoneTriggerTimeCalculator {
-
     private Id STO_BUSINESS_HOURS_ID {
         get {
             if (STO_BUSINESS_HOURS_ID == null) {
@@ -19,21 +18,23 @@ global without sharing class STO_ReservationTimeCalulator implements Support.Mil
      * description: calculating time from CaseMilestone StartDate to Violation
      */
     global Integer calculateMilestoneTriggerTime(String caseId, String milestoneTypeId) {
-
         // do not recalculate if casemilestone already exists.
         // otherwise it will shorten the time, because StartDate remains the same
         // and we calculating minutes form CaseMilestone StartDate.
 
-        CaseMilestone cm = [
-            SELECT Id,TargetResponseInMins
-            FROM CaseMilestone
-            WHERE CaseId = :caseId 
-                AND MilestoneType.Name = 'Handling time' 
-                AND IsCompleted = false
-            LIMIT 1
-        ];
+        CaseMilestone cm;
+        try {
+            cm = [
+                SELECT Id, TargetResponseInMins
+                FROM CaseMilestone
+                WHERE CaseId = :caseId AND MilestoneType.Name = 'Handling Time' AND IsCompleted = FALSE
+                LIMIT 1
+            ];
+        } catch (Exception ex) {
+            //No existing milestone
+        }
 
-        if(cm?.TargetResponseInMins != null){
+        if (cm?.TargetResponseInMins != null) {
             return cm.TargetResponseInMins;
         }
 
@@ -43,12 +44,9 @@ global without sharing class STO_ReservationTimeCalulator implements Support.Mil
 
         nextStartDate = BusinessHours.nextStartDate(
             bhId,
-            Datetime.newInstance(
-                now.date().addDays(1),
-                Time.newInstance(0,0,0,0)
-            )
+            Datetime.newInstance(now.date().addDays(1), Time.newInstance(0, 0, 0, 0))
         );
         Long diff = BusinessHours.diff(bhId, now, nextStartDate);
-        return (diff /1000 /60).intValue();
+        return (diff / 1000 / 60).intValue();
     }
 }
