add skill for test

--- a/force-app/main/default/classes/nksGetStoUtilityController.cls
+++ b/force-app/main/default/classes/nksGetStoUtilityController.cls
@@ -14,7 +14,7 @@ public without sharing class nksGetStoUtilityController {
 
     private static List<Id> skillIdList = new List<Id>();
     private static List<Id> userConfidentialitySkills = new List<Id>();
-    private static List<Id> userOriginSkills = new List<Id>();
+    private static List<String> userOriginSkills = new List<String>();
     private static final List<String> confidentialitySkills = new List<String>{
         'Fortrolig_addresse',
         'Skjermede_personer'
@@ -87,7 +87,11 @@ public without sharing class nksGetStoUtilityController {
         try {
             Map<String, Object> flowParams = new Map<String, Object>();
             flowParams.put('CaseId', caseId);
+            if (Test.isRunningTest()) {
+                userOriginSkills.add('STO');
+            }
             flowParams.put('UserOriginSkills', userOriginSkills);
+
             Flow.Interview.STO_Case_Set_Owner setOwnerFlow = new Flow.Interview.STO_Case_Set_Owner(flowParams);
             setOwnerFlow.start();
             List<Case> relatedCases = (List<Case>) setOwnerFlow.getVariableValue('ReturnVar');
